--- a/SWE363 Project/public/style.css
+++ b/SWE363 Project/public/style.css
@@ -4,10 +4,10 @@
     font-weight: 100;
 }
 
-
 body {
     background-color: #141414;
     margin: 0;
+    overflow-x: hidden;
 }
 
 header {
@@ -70,8 +70,6 @@ header>svg {
     opacity: 0.9;
     transform: translateX(0px);
 }
-
-
 
 .menu svg:nth-child(1) {
     font-size: 50px;
