--- a/SWE363 Project/css/style.css
+++ b/SWE363 Project/css/style.css
@@ -43,6 +43,12 @@ header h2 {
     font-weight: 400;
 }
 
+h3 {
+    font-size: 29px;
+    font-weight: 600;
+}
+
+
 header>svg {
     margin-left: auto;
     cursor: pointer;
@@ -93,4 +99,62 @@ header>svg {
 .bi-x-circle-fill {
     font-size: 27px;
     width: 28px;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 10px 10%;
+}
+
+section>div {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.card {
+    width: 365px;
+    height: 269px;
+    flex-shrink: 0;
+    background-color: #222222;
+    border-radius: 18px;
+
+}
+
+.card img {
+    width: 365px;
+    height: 208px;
+    flex-shrink: 0;
+    object-fit: cover;
+
+    border-radius: 18px 18px 0px 0px;
+    background: url(./WhatsApp\ Image\ 2023-04-08\ at\ 11.18.42\ PM.jpeg), lightgray 50% / cover no-repeat;
+}
+
+.card .cardTitle {
+    /* width: 340px;
+    height: 26px; */
+    flex-shrink: 0;
+    font-size: 20px;
+    color: #E8E8E8;
+    margin: 5px 10px;
+    font-family: 'Inter', sans-serif;
+
+}
+
+.card .cardDate {
+    /* width: 91px;
+    height: 13px; */
+    flex-shrink: 0;
+
+    color: #E8E8E8;
+    font-family: 'Inter', sans-serif;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: normal;
+    margin: 5px 20px;
+
 }
