--- a/SWE363 Project/css/event.css
+++ b/SWE363 Project/css/event.css
@@ -5,9 +5,14 @@
     background-color: #222222;
     color: #E8E8E8;
     border-radius: 18px;
-    padding: 10px;
+    padding: 15px;
 }
 
+.eventCard .titlePar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 
 .eventCard .cardTitle {
@@ -18,6 +23,18 @@
     font-weight: 400;
 
     font-family: 'Inter', sans-serif;
+}
+
+.eventCard .registerButton{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    width: 70px;
+    height: 16px;
+    font-size: 13px;
+    border-radius: 9px;
+    background: #f6ec04;
+    color: #222222;
 
 }
 
@@ -28,7 +45,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    opacity: 0.57;
+    opacity: 0.67;
 }
 
 
@@ -37,13 +54,15 @@
 .eventCard .cardDetails {
     display: flex;
     justify-content: space-between;
-    opacity: 0.57;
 
 }
 
 .eventCard .cardDetails>span {
+    color: #f6ec04;
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    opacity: 0.78;
+
 }
