--- a/SWE363 Project/html/login.ejs
+++ b/SWE363 Project/html/login.ejs
@@ -36,7 +36,7 @@
                 
                 <button type="submit">Login</button>
             </form>
-            <a href="/register.html">Register</a>
+            <a href="/register">Register</a>
         </div>
     </main>
 </body>
