--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<% if (massages.error) { %>
+    <%= massages.error %>
+<% } %>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
