--- a/SWE363 Project/css/style.css
+++ b/SWE363 Project/css/style.css
@@ -15,6 +15,10 @@ header {
     display: flex;
     align-items: center;
     padding: 5px;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    top: 0;
 }
 
 header img {
@@ -58,6 +62,7 @@ header>svg {
     display: none;
     flex-direction: column;
     color: #E8E8E8;
+    position: fixed;
     z-index: 1;
     gap: 10px;
     height: 100%;
@@ -117,3 +122,7 @@ section>div {
     gap: 16px;
 }
 
+main {
+    position: relative;
+    top: 90px;
+}
