--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./covrege.css">
-    <link rel="stylesheet" href="./event.css">
-    <title>KFUPM Photoclub</title>
+    <link rel="stylesheet" href="./eventCard.css">    
+    <link rel="stylesheet" href="./covregeCard.css">    
+    <title>KFUPM Photoclub 11</title>
 </head>
 
 
 <body>
     <header>
+        <%- include('header') %>
     </header>
-    <script src="./header.js"></script>
+
 
     <main>
         <section>
@@ -38,6 +39,7 @@
                         Don’t miss this chance <br>
                         Note: “your attend count with non academic activities“
                     </p>
+
                     <div class="cardDetails">
                         <span>Date: 7/10/2023</span>
                         <span>Time: 7:30 PM</span>
@@ -51,6 +53,7 @@
         </section>
     </main>
 </body>
+<script src="index.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
