--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
 
     <main>
         <div class="loginContainer">
-            <form action="/login" method="POST">
+            <form action="/login" method="POST" class="login-form">
                 <h2>Login</h2>
                 <div>
                     <label for="email">Email</label> 
