--- a/SWE363 Project/css/style.css
+++ b/SWE363 Project/css/style.css
@@ -18,7 +18,7 @@
   
   @font-face {
     font-family: 'Inter';
-    src: url('fonts/Inter-Regular.ttf') format('truetype');
+    src: url('./fonts/Inter-Regular.ttf') format('truetype');
     font-weight: 400;
   }
   
