--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,7 +12,7 @@
     <i id="xIcon" class="bi bi-x-circle-fill"></i>
     <i id="profileIcon" class="bi bi-person-circle"></i>
     <a href="#">Home</a>
-    <a href="#">covreges</a>
+    <a href="covreges">covreges</a>
     <a href="#">Events</a>
     <a href="#">About Photo Club</a>
     <a href="#">Join Photo Club</a>
