--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,8 +19,8 @@
     <script src="./header.js"></script>
 
     <main>
-        <div class="registerContainer">
-            <form action="/register" method="POST">
+        <div class="loginContainer">
+            <form action="/register" method="POST" class="login-form">
                 <h2>Register</h2>
 
                 <div>
