--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,10 +14,9 @@
 
 <body>
     <header>
+        <%- include('header') %>
 
     </header>
-    <script src="./header.js"></script>
-
     <main>
         <div class="loginContainer">
             <form action="/register" method="POST" class="login-form">
