--- a/SWE363 Project/css/covregeCard.css
+++ b/SWE363 Project/css/covregeCard.css
@@ -1,3 +1,20 @@
+.cardsContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.cardsContainer > div {
+    padding: 10px;
+    background-color: #1e1e1e;
+    border-radius: 15px;
+}
+
+.cardsContainer h1 {
+    color: aliceblue;
+}
+
+
 .coverageCard {
     width: 365px;
     height: 269px;
