--- a/views/covreges.ejs
+++ b/views/covreges.ejs
@@ -10,13 +10,6 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="covregeCard.css">
 
-    <style>
-        .cardsContainer{
-            display: flex;
-            flex-direction: column;
-            gap: 30px;
-        }
-    </style>
     
     <title>Document</title>
 </head>
@@ -31,6 +24,7 @@
         <main>
             <section class="cardsContainer">
                 <div>
+                    <h1>Coverages</h1>
                     <div class="coverageCard">
                         <img src="./5ec2a64acde913370c38338d8062af1d.jpeg" alt="">
                         <p class="cardTitle">Ceremony honoring club presidents</p>
