--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,9 +16,8 @@
 
 <body>
     <header>
-
+        <%- include('header') %>
     </header>
-    <script src="./header.js"></script>
 
     <main>
         <div class="loginContainer">
