correct title and delete unuse lines

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./eventCard.css">    
     <link rel="stylesheet" href="./covregeCard.css">    
-    <title>KFUPM Photoclub 11</title>
+    <title>KFUPM Photoclub</title>
 </head>
 
 
