title icon and title for each page

--- a/views/covrege.ejs
+++ b/views/covrege.ejs
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="covrege.css">
+  <link rel="icon" href="./photo-club-icon.ico" type="image/x-icon">
 
   <title><%= covrg.ceremonyTitle %></title>
 </head>
