--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,8 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./login.css">
+    <link rel="icon" href="./photo-club-icon.ico" type="image/x-icon">
+
     <title>Register</title>
 </head>
 
