--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./eventCard.css">    
-    <link rel="stylesheet" href="./covregeCard.css">    
+    <link rel="stylesheet" href="./covregeCard.css">  
+    <link rel="icon" href="./photo-club-icon.ico" type="image/x-icon">
+  
     <title>KFUPM Photoclub</title>
 </head>
 
