--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,7 +17,7 @@
     <i id="profileIcon" class="bi bi-person-circle"></i>
     <a href="/">Home</a>
     <a href="covreges">covreges</a>
-    <a href="#">Events</a>
+    <a href="events">Events</a>
     <a href="#">About Photo Club</a>
     <a href="register">Join Photo Club</a>
 </div>
