--- a/views/covreges.ejs
+++ b/views/covreges.ejs
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="icon" href="./photo-club-icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="covregeCard.css">
-    <link rel="icon" href="./photo-club-icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="covrege.css">
 
     
     <title>Coverages</title>
@@ -55,10 +56,6 @@
                 </div>
 
 
-
-
-
-
                 <!-- <div class="coverageCard">
                     <img src="<%# imagePath %>" alt="">
                     <p class="cardTitle">
@@ -68,8 +65,29 @@
                         <%# ceremonyDate %>
                     </p>
                 </div> -->
+
             </section>
+
+            <% if (bool) { %>
+
+            <div class="button-add-search">
+                <button type="button" id="addButton" class="btn btn-outline-primary">Add</button>
+                <button type="button" class="btn btn-outline-secondary">Search</button>
+            </div>
+            <% } %>
+
         </main>
+        <script>
+            cvCard = document.querySelectorAll(".coverageCard");
+            cvCard.forEach(element => {
+                element.addEventListener('click', function() {
+                window.location.href = 'covrege'
+            }); 
+        
+            // console.log(bool)
+        })
+        </script>
+        
 
 </body>
 
