--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,6 +20,10 @@
 
     </header>
     <main>
+        <% if (messages.error) { %>
+            <div id="error-message" class="errorMessage"><%= messages.error %></div> 
+        <% } %>
+
         <div class="loginContainer">
             <form action="/register" method="POST" class="login-form">
                 <h2>Register</h2>
@@ -47,6 +51,18 @@
             <a href="/login">Login</a>
         </div>
     </main>
+    <script>            // Wait for the DOM to be fully loaded
+        document.addEventListener('DOMContentLoaded', function() {
+            // Check if the element exists
+            var errorMessage = document.getElementById('error-message');
+            if (errorMessage) {
+                // Set a timeout to hide the message after 3 seconds (3000 milliseconds)
+                setTimeout(function() {
+                    errorMessage.style.display = 'none';
+                }, 3000);
+            }
+        });
+</script>
 </body>
 
 </html>
