--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,6 +15,9 @@
 <div class="menu" id="dropdownMenu">
     <i id="xIcon" class="bi bi-x-circle-fill"></i>
     <i id="profileIcon" class="bi bi-person-circle"></i>
+    <form action="/logout?_method=DELETE" method="POST">
+        <button type="submit">Log Out</button>
+    </form>
     <a href="/">Home</a>
     <a href="covreges">covreges</a>
     <a href="events">Events</a>
