--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,6 +16,7 @@
     <i id="xIcon" class="bi bi-x-circle-fill"></i>
     <i id="profileIcon" class="bi bi-person-circle"></i>
     <form action="/logout?_method=DELETE" method="POST">
+        <input type="hidden" name="_method" value="DELETE">
         <button type="submit">Log Out</button>
     </form>
     <a href="/">Home</a>
