--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -7,27 +7,32 @@
 		<link rel="stylesheet" href="https://use.typekit.net/hky5sxh.css">
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="base.css" />
+        <link rel="stylesheet" href="style.css">
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 		<script src="//tympanus.net/codrops/adpacks/analytics.js"></script>
 	</head>
 	<body class="loading">
-		<main>
+		<header>
+            <%- include("header") %>
+        </header>
+
+        <main>
 			<div class="frame">
 				<a class="frame__back" href="https://tympanus.net/codrops/?p=73075">Back to the article</a>
 				<a class="frame__prev" href="http://tympanus.net/Development/GridFlowEffect/">Previous demo</a>
 			</div>
 			<div class="intro"> 
 				<h1 class="intro__title"> 
-					<span class="intro__title-pre">On-Scroll</span> 
-					<span class="intro__title-sub">Perspective Grid Animations</span> 
+					<span class="intro__title-pre">Photo Club</span> 
+					<span class="intro__title-sub">Welcom To Our Pige</span> 
 				</h1> 
 				<span class="intro__info">Scroll moderately to fully experience the animations</span> 
 			</div>
 			<section class="content">				
 				<div class="grid grid--1">
 					<div class="grid-wrap">
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(2.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(3.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(4.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(5.jpg)"></div></div>
@@ -81,8 +86,8 @@
 			<section class="content">
 				<div class="grid grid--2">
 					<div class="grid-wrap">
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(2.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(3.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(4.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(5.jpg)"></div></div>
@@ -147,14 +152,14 @@
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(5.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(12.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(27.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(46.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(35.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(20.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(39.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(8.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(25.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(2.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(44.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(43.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(17.jpg)"></div></div>
@@ -207,8 +212,8 @@
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(13.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(4.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(14.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(2.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(11.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(20.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(23.jpg)"></div></div>
@@ -233,14 +238,14 @@
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(5.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(12.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(27.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(1.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://static.wixstatic.com/media/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png/v1/fill/w_640,h_366,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/bb1bd6_f221ad0f4d6f4103bf1d37b68b04492e~mv2.png)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(46.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(35.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(20.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(39.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(8.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(25.jpg)"></div></div>
-						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(2.jpg)"></div></div>
+						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(https://media.istockphoto.com/id/1146517111/photo/taj-mahal-mausoleum-in-agra.jpg?s=612x612&w=0&k=20&c=vcIjhwUrNyjoKbGbAQ5sOcEzDUgOfCsm9ySmJ8gNeRk=)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(44.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(43.jpg)"></div></div>
 						<div class="grid__item"><div class="grid__item-inner" style="background-image:url(17.jpg)"></div></div>
