--- a/SWE363 Project/css/base.css
+++ b/SWE363 Project/css/base.css
@@ -1,7 +1,43 @@
 @font-face {
     font-family: 'Inter';
-    src: url('./fonts/Inter-Regular.ttf') format('truetype');
+    src: url('Inter-Thin.ttf') format('truetype');
+    font-weight: 100;
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    src: url('Inter-ExtraLight.ttf') format('truetype');
+    font-weight: 200;
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    src: url('Inter-Light.ttf') format('truetype');
+    font-weight: 300;
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    src: url('Inter-Regular.ttf') format('truetype');
     font-weight: 400;
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    src: url('Inter-Medium.ttf') format('truetype');
+    font-weight: 500;
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    src: url('Inter-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    src: url('Inter-Bold.ttf') format('truetype');
+    font-weight: 700;
   }
 
 
@@ -16,8 +52,8 @@
 	--color-text: #fff;
 	--color-bg: #000;
 	--color-link: #fff;
-	--color-link-hover: #907030;
-	--color-title: #907030;
+	--color-link-hover: #D6CE10;
+	--color-title: #D6CE10;
 	--perspective: 1500px;
 	--grid-item-ratio: 1.5;
 	--grid-width: 100%;
@@ -31,7 +67,7 @@ body {
 	margin: 0;
 	color: var(--color-text);
 	background-color: var(--color-bg);
-	font-family: "moret-variable", serif;
+	font-family: 'Inter', serif;
 	font-variation-settings: "ital" 0, "wght" 300;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
