--- a/views/covreges.ejs
+++ b/views/covreges.ejs
@@ -68,7 +68,7 @@
 
             </section>
 
-            <% if (bool) { %>
+            <% if (userRole == "admin") { %>
 
             <div class="button-add-search">
                 <button type="button" id="addButton" class="btn btn-outline-primary">Add</button>
